--- a/paydays1/html/create/join.html
+++ b/paydays1/html/create/join.html
@@ -34,40 +34,36 @@
                 </div>
                 <ul>
                     <li>
-                        <a href="#">
-                            <div>
-                                <input type="checkbox" id="c1" class="check">
-                                <label for="c1"></label>
-                            </div>
-                            <span>개인정보 약관 동의</span>
-                        </a>
+                        <div>
+                            <input type="checkbox" id="c1" class="check">
+                            <label for="c1"></label>
+                        </div>
+                        <span>개인정보 약관 동의</span>
+                        <a href="#"><img src="../../assets/images/icon-flat-more-right-s@3x.png" alt=""></a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div>
-                                <input type="checkbox" id="c2" class="check">
-                                <label for="c2"></label>
-                            </div>
-                            <span>고유식별 정보 처리 동의</span>
-                        </a>
+                        <div>
+                            <input type="checkbox" id="c2" class="check">
+                            <label for="c2"></label>
+                        </div>
+                        <span>개인정보 약관 동의</span>
+                        <a href="#"><img src="../../assets/images/icon-flat-more-right-s@3x.png" alt=""></a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div>
-                                <input type="checkbox" id="c3" class="check">
-                                <label for="c3"></label>
-                            </div>
-                            <span>고유식별 정보 처리 동의</span>
-                        </a>
+                        <div>
+                            <input type="checkbox" id="c3" class="check">
+                            <label for="c3"></label>
+                        </div>
+                        <span>개인정보 약관 동의</span>
+                        <a href="#"><img src="../../assets/images/icon-flat-more-right-s@3x.png" alt=""></a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div>
-                                <input type="checkbox" id="c4" class="check">
-                                <label for="c4"></label>
-                            </div>
-                            <span>고유식별 정보 처리 동의</span>
-                        </a>
+                        <div>
+                            <input type="checkbox" id="c4" class="check">
+                            <label for="c4"></label>
+                        </div>
+                        <span>개인정보 약관 동의</span>
+                        <a href="#"><img src="../../assets/images/icon-flat-more-right-s@3x.png" alt=""></a>
                     </li>
                 </ul>
             </article>
